--- a/styles.css
+++ b/styles.css
@@ -290,9 +290,9 @@ body{
 }
 
 .highlighted-card {
-    background-color: hsla(120, 74%, 46%, 0.712);
+    background-color: rgb(23, 155, 23);
     border: 2px solid lime;
-    transform: translateY(-15px) scale(1.1) !important;
+    transform: translateY(-10px) !important;
     box-shadow: 0 0 20px lime;
     z-index: 100;
     animation: 2s infinite ease-in-out !important;
@@ -300,7 +300,7 @@ body{
 }
 
 .highlighted-card:hover {
-    transform: translateY(-25px) scale(1.15) !important;
+    transform: translateY(-35px) !important;
     box-shadow: 0 0 40px lime;
 }
 
