--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,31 @@ body{
     font-size: 20px;
 }
 
+#difficulty-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    margin: 0px auto;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+}
+
+#difficulty-select {
+    width: 100px;
+    margin: 15px;
+    font-size: 20px;
+}
+
+#difficulty-desc{
+    font-size: 0.7em;
+    font-weight: normal;
+    color: #4caf50;
+    text-shadow: 2px 2px 10px;
+}
+
 #player-hand{
     display: flex;
     flex-wrap: wrap;
