--- a/styles.css
+++ b/styles.css
@@ -510,7 +510,7 @@ body{
 
 #notebook-toggle-btn{
     writing-mode: vertical-rl;
-    background: #2c3e50;
+    background-color: #2c3e50;
     color: white;
     padding: 15px 10px;
     border: 1px solid white;
@@ -531,7 +531,7 @@ body{
 #notebook-content{
     display: flex;
     flex-direction: column;
-    background: hsla(210, 29%, 24%, 0.6);
+    background-color: hsla(210, 29%, 24%, 0.6);
     color: white;
     padding: 5px 5px;
     border: 2px solid white;
@@ -594,8 +594,13 @@ body{
 
 .card-name.eliminated {
     text-decoration: line-through;
-    color: #7f8c8d;   /* Grayed out */
+    color: #7f8c8d;
     font-style: italic;
+}
+
+.eliminated-pawn {
+    opacity: 0.5;
+    transform: scale(0.7);
 }
 
 #hall { top: 5%; left: 40%; width: 18.5%; height: 20%; }
